@@ -115,6 +115,9 @@
 	define("TRIGGER_VALUE_TRUE",1);
 	define("TRIGGER_VALUE_UNKNOWN",2);
 
+	define("TRIGGER_STATUS_ENABLED",0);
+	define("TRIGGER_STATUS_DISABLED",1);
+
 	define("RECIPIENT_TYPE_USER",0);
 	define("RECIPIENT_TYPE_GROUP",1);
 
